Bugfix: incorrect scrollbars/spacing when editing container with many assignments

--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -23,6 +23,15 @@ body {
   max-inline-size: 300px;
 }
 
+/**
+ Bugfix: incorrect scrollbars/spacing when editing container with many assignments
+ https://github.com/mozilla/multi-account-containers/issues/948
+ */
+html,
+body {
+  block-size: 100%;
+}
+
 :root {
   --primary-action-color: #248aeb;
   --title-text-color: #000;
@@ -783,8 +792,20 @@ span ~ .panel-header-text {
   padding-inline-start: 16px;
 }
 
+/**
+ Bugfix: incorrect scrollbars/spacing when editing container with many assignments
+ https://github.com/mozilla/multi-account-containers/issues/948
+ */
+.edit-container-panel .columns {
+  overflow: hidden;
+}
+
 #edit-sites-assigned {
-  flex: 1;
+  /**
+   Bugfix: incorrect scrollbars/spacing when editing container with many assignments
+   https://github.com/mozilla/multi-account-containers/issues/948
+   */
+  flex: 1000;
 }
 
 #edit-sites-assigned h3 {
